# NH3-PowerPlant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: 00_Projektidee.md  01_Forschungsfrage_und_Hypothese.md  02_Thermodynamische_Grundlagen.md  03_Stand_der_Technik_gekoppelter_thermischer_Kreisprozesse.md  04_Systementwurf.md  05_Referenzmodell.md  06_Berechnungsmodell.md  07_Variantenvergleich.md  10_Ausblick.md  90_Architekturentscheidungen.md  91_Modellierungsentscheidungen.md  93_Roadmap.md  94_Berechnungskonzept.md  95_Berichtsgenerierung.md  96_Ergebnismodell.md  99_Glossar.md  Übersicht.md
examples/: reference_cycle.py
src/nh3powerplant/: init.py  version.py
src/nh3powerplant/components/: __init__.py  component.py  condenser.py  evaporator.py  generator.py  pump.py  turbine.py
src/nh3powerplant/connection/: __init__.py  connection.py
src/nh3powerplant/core/: __init__.py  exceptions.py  identifiable.py  identifier.py  port.py  provenance.py  registry.py
src/nh3powerplant/fluids/: __init__.py  coolprop_fluid.py  fluid.py
src/nh3powerplant/results/: __init__.py  json_io.py  run_info.py  serializers.py  simulation_result.py
src/nh3powerplant/simulation/: __init__.py  simulation.py
src/nh3powerplant/solver/: __init__.py  sequential_solver.py  solver.py
src/nh3powerplant/state/: __init__.py  phase.py  statepoint.py
templates/: 08_Ergebnisse.md.j2  09_Diskussion.md.j2
tests/: test_import.py
tests/unit/: test_reference_cycle.py
tests/unit/components/: test_component.py  test_condenser.py  test_evaporator.py  test_generator.py  test_pump.py  test_turbine.py
tests/unit/connection/: test_connection.py
tests/unit/core/: test_identifier.py  test_ports.py  test_provenance.py  test_registry.py
tests/unit/fluids/: test_fluid.py
tests/unit/results/: test_json_io.py  test_simulation_result.py
tests/unit/simulation/: test_simulation.py
tests/unit/solver/: test_sequential_solver.py
tests/unit/state/: test_statepoint.py
