[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nh3powerplant"
version = "0.1.0"
description = "Simulation framework for coupled thermodynamic cycles"
readme = "README.md"
requires-python = ">=3.13"

authors = [
    {name = "Rolf Masfelder"}
]

license = {text = "MIT"}

dependencies = [
    "coolprop",
    "jinja2",
]

[project.optional-dependencies]

analysis = [
    "matplotlib>=3.11.0",
    "matplotlib-inline>=0.2.2",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
]

notebook = [
    "jupyter>=1.1.1",
    "jupyter-console>=6.6.3",
    "jupyter-events>=0.12.1",
    "jupyter-lsp>=2.3.1",
    "jupyter_builder>=1.1.0",
    "jupyter_client>=8.9.1",
    "jupyter_core>=5.9.1",
    "jupyter_server>=2.20.0",
    "jupyter_server_terminals>=0.5.4",
    "jupyterlab>=4.6.1",
    "jupyterlab_pygments>=0.3.0",
    "jupyterlab_server>=2.28.0",
    "jupyterlab_widgets>=3.0.16",
]

dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
    "pre-commit",
    "build",
]
